fix scrolling on mobile v3

--- a/style.scss
+++ b/style.scss
@@ -66,13 +66,11 @@ main {
 }
 
 .container {
-    // width: 51%;
     width: 736px;
     height: 512px;
 
     .white-background {
         width: 100%;
-        height: 100%;
         background: $color-neutral-white;
         box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
         border-radius: 32px;
@@ -91,7 +89,7 @@ main {
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 1.3rem;
+            gap: .5rem;
 
             .result-title {
                 color: #CAC9FF;
@@ -135,9 +133,6 @@ main {
                 line-height: 42px;
                 @include font-bold();
                 text-align: center;
-
-                // padding-top: 1rem;
-
             }
 
             .result-description {
@@ -147,7 +142,6 @@ main {
                 line-height: 1.45rem;
                 max-width: 14.2rem;
                 @include font-medium();
-                // padding-bottom: 2rem;
             }
 
         }
@@ -167,13 +161,12 @@ main {
                 flex-direction: column;
                 align-items: stretch;
                 justify-content: center;
-                gap: 1.3rem;
+                padding: 3rem 0;
 
                 .summary-title {
                     font-size: 24px;
                     color: $color-neutral-dark-gray-blue;
                     @include font-bold();
-
                 }
 
                 .summary-ranks {
@@ -271,7 +264,7 @@ main {
                     border: none;
                     font-size: 1rem;
                     border-radius: 10rem;
-                    margin-top: 1rem;
+                    margin-top: 3rem;
                     transition: all 500ms ease-in-out;
 
                     &:hover {
@@ -300,6 +293,7 @@ footer {
         text-decoration: none;
     }
 }
+
 //Tablets
 @media only screen and (max-width: 440px) {
     .container {
@@ -316,17 +310,18 @@ footer {
 @media only screen and (max-width: 414px) {
     main {
         align-items: flex-start;
-        height: 100vh;
+        max-height: unset;
         min-height: unset;
+        height: 100%;
     }
 
     .container {
         height: 100%;
+        overflow-y: auto;
 
         .white-background {
             grid-template-rows: 356px 453px;
             border-radius: 0;
-            overflow: auto;
 
             .result {
                 padding-top: 1rem;
